@@ -59,4 +59,9 @@ public class Call extends Expr {
     public <S,E> E accept(IRVisitor<S,E> visitor) {
         return visitor.visit(this);
     }
+
+    protected void _dump(Dumper d) {
+        d.printMember("expr", expr);
+        d.printMembers("args", args);
+    }
 }
