@@ -2,7 +2,7 @@ package net.loveruby.cflat.ir;
 import net.loveruby.cflat.type.Type;
 import net.loveruby.cflat.asm.*;
 
-abstract public class Expr {
+abstract public class Expr implements Dumpable {
     protected Type type;
 
     protected Expr(Type type) {
@@ -32,4 +32,11 @@ abstract public class Expr {
     }
 
     abstract public <S,E> E accept(IRVisitor<S,E> visitor);
+
+    public void dump(Dumper d) {
+        d.printClass(this);
+        _dump(d);
+    }
+
+    abstract protected void _dump(Dumper d);
 }
