@@ -1,7 +1,7 @@
 package net.loveruby.cflat.ir;
 import net.loveruby.cflat.ast.Location;
 
-abstract public class Stmt {
+abstract public class Stmt implements Dumpable {
     protected Location location;
 
     public Stmt(Location loc) {
@@ -12,6 +12,11 @@ abstract public class Stmt {
 
     public Location location() {
         return location;
+    }
+
+    public void dump(Dumper d) {
+        d.printClass(this, location);
+        _dump(d);
     }
 
     abstract protected void _dump(Dumper d);
