@@ -17,4 +17,9 @@ public class Uni extends Expr {
     public <S,E> E accept(IRVisitor<S,E> visitor) {
         return visitor.visit(this);
     }
+
+    protected void _dump(Dumper d) {
+        d.printMember("op", op.toString());
+        d.printMember("expr", expr);
+    }
 }
