@@ -27,4 +27,8 @@ public class Var extends Expr {
     public <S,E> E accept(IRVisitor<S,E> visitor) {
         return visitor.visit(this);
     }
+
+    protected void _dump(Dumper d) {
+        d.printMember("entity", entity.name());
+    }
 }
