@@ -1,3 +1,7 @@
+Sun Apr 26 23:35:07 2009  Minero Aoki  <aamine@loveruby.net>
+
+	* net/loveruby/cflat/ir: implement IR#dump.
+
 Sun Apr 26 22:41:08 2009  Minero Aoki  <aamine@loveruby.net>
 
 	* net/loveruby/cflat/compiler/IRGenerator.java (BlockNode): static
